Add more project setup (DI)

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>ELMU</title>
+    <link rel="stylesheet" href="/main.css">
   </head>
   <body>
+    <div class="Elmu">elmu</div>
     <%- body %>
   </body>
 </html>
