--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -17,3 +17,11 @@ html, body {
   font-family: 'Dancing Script';
   font-size: 64px;
 }
+
+.Doc {
+  color: #333;
+  background-color: #eee;
+  padding: 20px;
+  font-family: Verdana, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+}
