Add prototype of quicktester plugin

--- a/src/views/doc.ejs
+++ b/src/views/doc.ejs
@@ -9,4 +9,7 @@
   </section>
   <% }); %>
 </main>
+<script>
+  window.__initalState__ = <%- htmlescape(doc) %>;
+</script>
 <script src="/doc.js"></script>
