--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -25,3 +25,54 @@ html, body {
   font-family: Verdana, Helvetica, Arial, sans-serif;
   font-size: 16px;
 }
+
+.QuickTester {
+
+  .QuickTester-initLink {
+    display: block;
+
+    &.is-inactive {
+      display: none;
+    }
+  }
+
+  .QuickTester-testContainer {
+    display: none;
+
+    &.is-active {
+      display: block;
+    }
+  }
+
+  .QuickTester-test {
+    display: block;
+
+    &.is-inactive {
+      display: none;
+    }
+  }
+
+  .QuickTester-answer {
+    display: none;
+
+    &.is-active {
+      display: block;
+    }
+  }
+
+  .QuickTester-nextButton {
+    display: inline;
+
+    &.is-inactive {
+      display: none;
+    }
+  }
+
+  .QuickTester-resultButton {
+    display: inline;
+
+    &.is-inactive {
+      display: none;
+    }
+  }
+}
