--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,7 +1,10 @@
-<h1>
-    <%= title %>
-</h1>
-
-<p>Go to the <a href="/docs">documents</a>!</p>
-
+<div class="Elmu">
+  <a class="Elmu-logo" href="/">elmu</a>
+</div>
+<div class="Section">
+  <h1>
+      <%= title %>
+  </h1>
+  <p>Go to the <a href="/docs">documents</a>!</p>
+</div>
 <script src="/index.js"></script>
