--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,3 +1,5 @@
+@import './variables.less';
+
 @font-face {
   font-family: 'Dancing Script';
   font-style: normal;
@@ -14,16 +16,56 @@ html, body {
   margin: 0;
 }
 
-.Elmu {
-  color: white;
-  background-color: steelblue;
-  padding: 20px;
-  font-family: 'Dancing Script';
-  font-size: 64px;
+a {
+  color: @global-elmu-blue;
+  text-decoration: none;
+  cursor: pointer;
+
+  &:link, &:visited {
+    text-decoration: none;
+  }
+
+  &:active, &:hover {
+    text-decoration: underline;
+  }
 }
 
-.Doc {
-  padding: 20px;
+.Elmu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  background-color: @global-elmu-blue;
+  padding: 5px 20px;
+  position: sticky;
+  top: 0;
+}
+
+.Elmu-logo {
+  flex: none;
+  display: block;
+  color: inherit;
+  background-color: inherit;
+  font-family: 'Dancing Script';
+  font-size: 32px;
+  text-decoration: none;
+
+  &:link, &:visited, &:active, &:hover {
+    text-decoration: none;
+  }
+}
+
+.Elmu-editLink {
+  flex: none;
+  display: block;
+  color: inherit;
+  background-color: inherit;
+}
+
+.Section {
+  margin: 0 auto;
+  width: @global-section-width-large-screen;
+  padding: @global-section-padding-large-screen;
 }
 
 @import '../plugins/quick-tester/quick-tester.less';
