--- a/src/views/doc.ejs
+++ b/src/views/doc.ejs
@@ -1,6 +1,6 @@
-<div class="Elmu">
-  <a class="Elmu-logo" href="/">elmu</a>
-  <a class="Elmu-editLink" href="/edit/doc/<%= doc._id %>">Bearbeiten</a>
+<div class="PageHeader">
+  <a class="PageHeader-logo" href="/">elmu</a>
+  <a class="PageHeader-editLink" href="/edit/doc/<%= doc._id %>">Bearbeiten</a>
 </div>
 <main>
   <% doc.sections.forEach(section => { %>
