--- a/src/views/docs.ejs
+++ b/src/views/docs.ejs
@@ -1,5 +1,5 @@
-<div class="Elmu">
-  <a class="Elmu-logo" href="/">elmu</a>
+<div class="PageHeader">
+  <a class="PageHeader-logo" href="/">elmu</a>
 </div>
 <div class="Section">
   <h1>Dokumente</h1>
