Enable inline editing
* Adjust database operations for versioning
* Refactor stores
* Adjust Markdown editor
* Adjust db seed script
* Move elmu-server to its own class

--- a/src/components/page-header.less
+++ b/src/components/page-header.less
@@ -33,6 +33,17 @@
   }
 }
 
+.PageHeader-links {
+  flex: none;
+  display: block;
+  color: inherit;
+  background-color: inherit;
+
+  * {
+    color: inherit;
+  }
+}
+
 .PageHeader-editLink {
   flex: none;
   display: block;
