--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -26,6 +26,11 @@ a {
   margin: 0 auto;
   width: @global-section-width-large-screen;
   padding: @global-section-padding-large-screen;
+
+  .Section-display:hover {
+    cursor: hand;
+    background-color: silver;
+  }
 }
 
 @import '../components/page-header.less';
