Add youtube video plugin

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -35,3 +35,4 @@ a {
 
 @import '../components/page-header.less';
 @import '../plugins/quick-tester/quick-tester.less';
+@import '../plugins/youtube-video/youtube-video.less';
