Render everything with React
* Merge server-renderers and client-renderers
* Remove EJS
* Create commons chunk bundle
* Optimize webpack performance
* Fix LESS compilation in watch mode

--- a/src/plugins/quick-tester/quick-tester.less
+++ b/src/plugins/quick-tester/quick-tester.less
@@ -1,50 +1,1 @@
-.QuickTester {
-
-  .QuickTester-initLink {
-    display: block;
-
-    &.is-inactive {
-      display: none;
-    }
-  }
-
-  .QuickTester-testContainer {
-    display: none;
-
-    &.is-active {
-      display: block;
-    }
-  }
-
-  .QuickTester-test {
-    display: block;
-
-    &.is-inactive {
-      display: none;
-    }
-  }
-
-  .QuickTester-answer {
-    display: none;
-
-    &.is-active {
-      display: block;
-    }
-  }
-
-  .QuickTester-nextButton {
-    display: inline;
-
-    &.is-inactive {
-      display: none;
-    }
-  }
-
-  .QuickTester-resultButton {
-    display: inline;
-
-    &.is-inactive {
-      display: none;
-    }
-  }
-}
+.QuickTester {}
