--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -34,5 +34,6 @@ a {
 }
 
 @import '../components/page-header.less';
+@import '../plugins/markdown/markdown.less';
 @import '../plugins/quick-tester/quick-tester.less';
 @import '../plugins/youtube-video/youtube-video.less';
