--- a/src/components/page-header.less
+++ b/src/components/page-header.less
@@ -12,18 +12,16 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: white;
-  background-color: @global-elmu-blue;
   padding: 5px 20px;
   position: sticky;
   top: 0;
+  background-color: #fff;
+  box-shadow: 0 2px 8px #f0f1f2;
 }
 
 .PageHeader-logo {
   flex: none;
   display: block;
-  color: inherit;
-  background-color: inherit;
   font-family: 'Dancing Script';
   font-size: 32px;
   text-decoration: none;
@@ -36,17 +34,9 @@
 .PageHeader-links {
   flex: none;
   display: block;
-  color: inherit;
-  background-color: inherit;
-
-  * {
-    color: inherit;
-  }
 }
 
 .PageHeader-editLink {
   flex: none;
   display: block;
-  color: inherit;
-  background-color: inherit;
 }
