Add simple image plugin

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -57,4 +57,5 @@ body {
 @import '../plugins/quick-tester/quick-tester.less';
 @import '../plugins/youtube-video/youtube-video.less';
 @import '../plugins/audio/audio.less';
+@import '../plugins/image/image.less';
 @import '../plugins/h5p-player/h5p-player.less';
