--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -5,6 +5,7 @@
 
 @import './roboto-font.less';
 @import './variables.less';
+@import './utilities.less';
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -53,6 +54,7 @@ body {
 
 @import '../components/page-header.less';
 @import '../components/repository-browser.less';
+@import '../components/object-max-width-slider.less';
 @import '../plugins/markdown/markdown.less';
 @import '../plugins/quick-tester/quick-tester.less';
 @import '../plugins/youtube-video/youtube-video.less';
