Redesign landing page

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -52,6 +52,7 @@ body {
   padding: 12px 24px;
 }
 
+@import '../components/pages/index.less';
 @import '../components/page-header.less';
 @import '../components/repository-browser.less';
 @import '../components/object-max-width-slider.less';
