Decrease landing page width by 10%

--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -1,5 +1,6 @@
 .IndexPage {
-  min-height: 75vh;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,12 +8,13 @@
 
 .IndexPage-content {
   width: 100%;
-  max-width: 900px;
+  max-width: 800px;
+  padding-bottom: 20vh;
 }
 
 .IndexPage-title {
   font-family: 'Dancing Script';
-  font-size: 64px;
+  font-size: 72px;
   text-align: center;
   color: @global-elmu-blue;
   margin: 32px 0;
