Use fallback fonts for IE

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -3,6 +3,7 @@
 
 // See also: https://ant.design/docs/spec/colors
 
+@import './dancing-script-font.less';
 @import './roboto-font.less';
 @import './variables.less';
 @import './utilities.less';
