Make grayscale images work with CSS

--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -39,10 +39,6 @@
 }
 
 .IndexPage-categoryImage {
+  display: block;
   max-width: 100%;
-  transition: all .2s ease-in-out;
-
-  &:hover {
-    transform: scale(1.1, 1.1);
-  }
 }
