--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -6,3 +6,19 @@
   .u-max-width-loop(@i + 1);
 }
 .u-max-width-loop (@iterations);
+
+.u-img-color-flip {
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
+  filter: grayscale(100%);
+  transition: all .2s ease-in-out;
+}
+
+.u-img-color-flip:hover {
+  -webkit-filter: grayscale(0%);
+  -moz-filter: grayscale(0%);
+  -ms-filter: grayscale(0%);
+  filter: grayscale(0%);
+  transform: scale(1.05);
+}
