--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,3 +1,3 @@
 @global-section-width-large-screen: 1200px;
 @global-section-padding-large-screen: 24px;
-@global-elmu-blue: steelblue;
+@global-elmu-blue: @primary-color;
