Add logo image to landing page

--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -4,6 +4,19 @@
   padding-bottom: 20vh;
 }
 
+@logo-size: 200px;
+
+.IndexPage-logo {
+  background-image: url('/images/Hochschullogo.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: @logo-size;
+  width: @logo-size;
+  position: absolute;
+  left: 25px;
+  top: 25px;
+}
+
 .IndexPage-title {
   font-family: 'Dancing Script';
   font-size: 72px;
