Change DnD library and refine section reordering

--- a/src/components/page-content.less
+++ b/src/components/page-content.less
@@ -2,6 +2,7 @@
   margin: 0 auto;
   max-width: @global-section-width-large-screen;
   padding: @global-section-padding-large-screen;
+  z-index: 0;
 
   &.PageContent-fullScreen {
     margin: 0;
