--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -48,6 +48,10 @@ body {
 @import '../components/page-header.less';
 @import '../components/page-content.less';
 @import '../components/pages/index.less';
+@import '../components/pages/login.less';
+@import '../components/pages/register.less';
+@import '../components/pages/reset-password.less';
+@import '../components/pages/complete-password-reset.less';
 @import '../components/repository-browser.less';
 @import '../components/object-max-width-slider.less';
 @import '../plugins/markdown/markdown.less';
