Rework repository browser to isolate subdirectories

--- a/src/components/repository-browser.less
+++ b/src/components/repository-browser.less
@@ -8,6 +8,20 @@
   }
 }
 
+.RepositoryBrowser-header {
+  display: flex;
+  align-items: center;
+  padding-bottom: 10px;
+}
+
+.RepositoryBrowser-headerBreadCrumbs {
+  flex: 1 0 0%;
+}
+
+.RepositoryBrowser-headerButtons {
+  flex: none;
+}
+
 .RepositoryBrowser-browserRecordIcon {
 
   &.RepositoryBrowser-browserRecordIcon--folder {
