--- a/src/components/menu-doc-ref.less
+++ b/src/components/menu-doc-ref.less
@@ -1,5 +1,11 @@
 .MenuDocRef {
-  position: relative;
+  flex: 1 0 0%;
+  display: flex;
+  align-items: center;
+}
+
+.MenuDocRef-titleAndUrl {
+  flex: 1 0 0%;
 }
 
 .MenuDocRef-title {
@@ -11,7 +17,8 @@
 }
 
 .MenuDocRef-deleteButton {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+  flex: none;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
 }
