--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -48,6 +48,7 @@ body {
 @import '../components/page-header.less';
 @import '../components/page-content.less';
 @import '../components/pages/index.less';
+@import '../components/pages/menu.less';
 @import '../components/pages/edit-menu.less';
 @import '../components/pages/login.less';
 @import '../components/pages/register.less';
