--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,3 +1,14 @@
+@grey-1:  #ffffff;
+@grey-2:  #fafafa;
+@grey-3:  #f5f5f5;
+@grey-4:  #e8e8e8;
+@grey-5:  #d9d9d9;
+@grey-6:  #bfbfbf;
+@grey-7:  #8c8c8c;
+@grey-8:  #595959;
+@grey-9:  #262626;
+@grey-10: #000000;
+
 @global-section-width-large-screen: 1200px;
 @global-section-padding-large-screen: 24px;
 @global-elmu-blue: @primary-color;
