Fix bug and implement copyright info in audio plugin

--- a/src/plugins/audio/audio.less
+++ b/src/plugins/audio/audio.less
@@ -1,5 +1,13 @@
-.Audio {
+.Audio {}
+
+.Audio-playerContainer {	
   display: flex;
-  align-items: center;
-  justify-content: center;
+	align-items: center;
+	justify-content: center;
+}
+
+.Audio-copyrightInfo {
+	padding-top: 20px;
+	font-size: 12px;
+	text-align: center;
 }
