Implement role based permission system
Resolves #2

--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -18,6 +18,12 @@
   top: 25px;
 }
 
+.IndexPage-loginLogout {
+  position: absolute;
+  right: 25px;
+  top: 25px;
+}
+
 .IndexPage-title {
   font-family: 'Dancing Script';
   font-size: 72px;
