Finish menu display page

--- a/src/components/page-content.less
+++ b/src/components/page-content.less
@@ -1,7 +1,7 @@
 .PageContent {
   margin: 0 auto;
   max-width: @global-section-width-large-screen;
-  padding: @global-section-padding-large-screen;
+  padding: (4 * @global-section-padding-large-screen) @global-section-padding-large-screen;
   z-index: 0;
 
   &.PageContent-fullScreen {
