Fix layouts in iexplore

--- a/src/components/page-content.less
+++ b/src/components/page-content.less
@@ -4,4 +4,11 @@
   max-width: @global-section-width-large-screen;
   padding: (4 * @global-section-padding-large-screen) @global-section-padding-large-screen;
   z-index: 0;
+
+  &.PageContent-fullScreen {
+    flex: 0 1 100%;
+    margin: 0;
+    padding: 0;
+    max-width: initial;
+  }
 }
