Add footer component without correct styles

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -15,6 +15,7 @@ body {
 @import '../components/page.less';
 @import '../components/page-header.less';
 @import '../components/page-content.less';
+@import '../components/page-footer.less';
 @import '../components/pages/index.less';
 @import '../components/pages/menu.less';
 @import '../components/pages/edit.less';
