Add footer on index side and styles

--- a/src/components/page-footer.less
+++ b/src/components/page-footer.less
@@ -2,14 +2,8 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  padding: 0;
+  padding-top: 20px;
   width: 100vw;
-  height: 30px;
+  height: 60px;
   text-align: center;
-
-  &.PageFooter-fullScreen {}
-}
-
-.PageFooter-link {
-	display: inline;
 }
