Add footer on all pages

--- a/src/components/page-content.less
+++ b/src/components/page-content.less
@@ -1,17 +1,7 @@
 .PageContent {
   margin: 0 auto;
+  min-height: 600px;
   max-width: @global-section-width-large-screen;
   padding: (4 * @global-section-padding-large-screen) @global-section-padding-large-screen;
   z-index: 0;
-
-  &.PageContent-fullScreen {
-    margin: 0;
-    padding: 0;
-    width: 100vw;
-    height: 100vh;
-    max-width: initial;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
 }
