--- a/src/components/page.less
+++ b/src/components/page.less
@@ -2,12 +2,14 @@
   margin: 0;
   padding: 0;
   display: block;
+  min-height: 600px;
 
-  &.Page-fullScreen {
+  &.Page--fullScreen {
     width: 100vw;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
   }
 }
