--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -23,6 +23,7 @@ body {
 @import '../components/pages/login.less';
 @import '../components/pages/register.less';
 @import '../components/pages/reset-password.less';
+@import '../components/pages/complete-registration.less';
 @import '../components/pages/complete-password-reset.less';
 @import '../components/menu-doc-ref.less';
 @import '../components/repository-browser.less';
