--- a/src/components/page-footer.less
+++ b/src/components/page-footer.less
@@ -1,9 +1,11 @@
 .PageFooter {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  padding-top: 20px;
-  width: 100vw;
-  height: 60px;
+  padding: 20px 0;
   text-align: center;
+
+  &.PageFooter--fullScreen {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
 }
