Change confirm dialog to modal dialog and button on top

--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -54,3 +54,19 @@
   display: block;
   max-width: 100%;
 }
+
+.IndexPage-docsButton {
+  position: absolute;
+  width: 160px;
+  top: 25px;
+  left: calc(~'50% - 75px');
+}
+
+@media (max-width: 1024px) {
+  .IndexPage-docsButton {
+    top: 100px;
+    left: 25px;
+  }
+}
+
+
