Add page for user administration
Resolves #32

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -21,6 +21,7 @@ body {
 @import '../components/pages/edit.less';
 @import '../components/pages/edit-menu.less';
 @import '../components/pages/login.less';
+@import '../components/pages/users.less';
 @import '../components/pages/register.less';
 @import '../components/pages/reset-password.less';
 @import '../components/pages/complete-registration.less';
