Add interval-trainer plugin

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,6 +1,8 @@
 @import '../../node_modules/antd/dist/antd.less';   // import official less entry file
 @import './ant-overrides.less';                     // override variables here
 
+@import (less) '../../node_modules/react-piano/dist/styles.css';
+
 // See also: https://ant.design/docs/spec/colors
 
 @import './dancing-script-font.less';
@@ -36,3 +38,4 @@ body {
 @import '../plugins/audio/audio.less';
 @import '../plugins/image/image.less';
 @import '../plugins/h5p-player/h5p-player.less';
+@import '../plugins/interval-trainer/interval-trainer.less';
