Add video plugin (I)
* Create data model and video display

References #51

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -36,6 +36,7 @@ body {
 @import '../plugins/quick-tester/quick-tester.less';
 @import '../plugins/youtube-video/youtube-video.less';
 @import '../plugins/audio/audio.less';
+@import '../plugins/video/video.less';
 @import '../plugins/image/image.less';
 @import '../plugins/h5p-player/h5p-player.less';
 @import '../plugins/interval-trainer/interval-trainer.less';
