--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -30,6 +30,7 @@ body {
 @import '../components/pages/complete-password-reset.less';
 @import '../components/menu-doc-ref.less';
 @import '../components/repository-browser.less';
+@import '../components/media-control.less';
 @import '../styles/panel.less';
 @import '../styles/section.less';
 @import '../plugins/markdown/markdown.less';
