Add user profile functionality
Resolves #45

--- a/src/components/page-content.less
+++ b/src/components/page-content.less
@@ -5,7 +5,7 @@
   padding: (4 * @global-section-padding-large-screen) @global-section-padding-large-screen;
   z-index: 0;
 
-  &.PageContent-fullScreen {
+  &.PageContent--fullScreen {
     flex: 0 1 100%;
     margin: 0;
     padding: 0;
