--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,6 +1,9 @@
 @import '../../node_modules/antd/dist/antd.less';   // import official less entry file
 @import './ant-overrides.less';                     // override variables here
 
+@import '../../node_modules/flag-icon-css/less/flag-icon.less';
+@flag-icon-css-path: '/images/flags';
+
 @import (less) '../../node_modules/react-piano/dist/styles.css';
 
 // See also: https://ant.design/docs/spec/colors
@@ -24,6 +27,7 @@ body {
 @import '../components/pages/edit-menu.less';
 @import '../components/pages/login.less';
 @import '../components/pages/users.less';
+@import '../components/pages/profile.less';
 @import '../components/pages/register.less';
 @import '../components/pages/reset-password.less';
 @import '../components/pages/complete-registration.less';
