Optimize bundles and loading times

--- a/src/components/pages/edit-doc.less
+++ b/src/components/pages/edit-doc.less
@@ -1,5 +1,5 @@
-.EditPage {}
+.EditDocPage {}
 
-.EditPage-docEditor {
+.EditDocPage-docEditor {
   padding-bottom: 2 * @global-section-padding-large-screen;
 }
