--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -23,7 +23,7 @@ body {
 @import '../components/page-footer.less';
 @import '../components/pages/index.less';
 @import '../components/pages/menu.less';
-@import '../components/pages/edit.less';
+@import '../components/pages/edit-doc.less';
 @import '../components/pages/edit-menu.less';
 @import '../components/pages/login.less';
 @import '../components/pages/users.less';
