Improve menu page layout in case of missing parts

--- a/src/components/pages/menu.less
+++ b/src/components/pages/menu.less
@@ -6,12 +6,11 @@
 
 .MenuPage-categories {
   flex: 1 0 0%;
-  padding-right: (@menu-page-gutter-width / 2);
+  padding-right: @menu-page-gutter-width;
 }
 
 .MenuPage-details {
   flex: 3 0 0%;
-  padding-left: (@menu-page-gutter-width / 2);
 }
 
 .MenuPage-categoryList {
