Add static layout for image-tiles display
References #59

--- a/src/plugins/image-tiles/image-tiles.less
+++ b/src/plugins/image-tiles/image-tiles.less
@@ -1,3 +1,21 @@
 .ImageTiles {
 }
 
+.ImageTiles-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.ImageTiles-tilesContainer {
+  flex: 1 0 0%;
+  padding: 10px;
+  text-align: center;
+}
+
+.ImageTiles-img {
+  width: 100;
+}
+
