Add links to image tiles
References #59

--- a/src/plugins/image-tiles/image-tiles.less
+++ b/src/plugins/image-tiles/image-tiles.less
@@ -1,3 +1,5 @@
+@image-tiles-description-color: @global-text-color;
+
 .ImageTiles {
 }
 
@@ -17,4 +19,8 @@
 
 .ImageTiles-img {
   max-width: 100%;
+}
+
+.ImageTiles-description {
+  color: @image-tiles-description-color;
 }
