--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -12,3 +12,4 @@
 @global-section-width-large-screen: 1200px;
 @global-section-padding-large-screen: 12px;
 @global-elmu-blue: @primary-color;
+@global-text-color: @text-color;
