--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -1,3 +1,6 @@
+@index-page-help-button-shadow-color: @grey-8;
+@index-page-help-button-hover-shadow-color: @global-elmu-blue;
+
 .IndexPage {
   width: 100%;
   max-width: 800px;
@@ -47,13 +50,17 @@
   width: 160px;
   top: 25px;
   left: calc(~'50% - 75px');
-}
 
-@media (max-width: 1024px) {
-  .IndexPage-docsButton {
+  @media (max-width: 1024px) {
     top: 100px;
     left: 25px;
   }
 }
 
+.IndexPage-helpButton {
+  box-shadow: @index-page-help-button-shadow-color 1px 1px 4px 0px;
 
+  &:hover {
+    box-shadow: @index-page-help-button-hover-shadow-color 1px 1px 4px 0px;
+  }
+}
