Fix video player for Chrome

--- a/src/plugins/video/video.less
+++ b/src/plugins/video/video.less
@@ -9,7 +9,9 @@
 .Video-mainPlayerContainer {
 
   &.Video-mainPlayerContainer--noDisplay {
-    display: none;
+    width: 0;
+    height: 0;
+    overflow: hidden;
   }
 }
 
