--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -38,6 +38,7 @@ body {
 @import '../styles/panel.less';
 @import '../styles/section.less';
 @import '../plugins/markdown/markdown.less';
+@import '../plugins/abc-notation/abc-notation.less';
 @import '../plugins/quick-tester/quick-tester.less';
 @import '../plugins/audio/audio.less';
 @import '../plugins/video/video.less';
