Add MIDI capabilities to ABC notation plugin

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -5,10 +5,12 @@
 @flag-icon-css-path: '/images/flags';
 
 @import (less) '../../node_modules/react-piano/dist/styles.css';
+@import (less) '../../node_modules/abcjs/abcjs-midi.css';
 
 // See also: https://ant.design/docs/spec/colors
 
 @import './dancing-script-font.less';
+@import './fontawesome.less';
 @import './roboto-font.less';
 @import './variables.less';
 @import './utilities.less';
