Add ear training plugin

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -48,3 +48,4 @@ body {
 @import '../plugins/h5p-player/h5p-player.less';
 @import '../plugins/image-tiles/image-tiles.less';
 @import '../plugins/interval-trainer/interval-trainer.less';
+@import '../plugins/ear-training/ear-training.less';
