Create setting admin page

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -29,6 +29,7 @@ body {
 @import '../components/pages/edit-menu.less';
 @import '../components/pages/login.less';
 @import '../components/pages/users.less';
+@import '../components/pages/settings.less';
 @import '../components/pages/profile.less';
 @import '../components/pages/register.less';
 @import '../components/pages/reset-password.less';
