Enable generic audio files in ear training

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -36,6 +36,7 @@ body {
 @import '../components/pages/complete-registration.less';
 @import '../components/pages/complete-password-reset.less';
 @import '../components/menu-doc-ref.less';
+@import '../components/audio-player.less';
 @import '../components/repository-browser.less';
 @import '../components/media-control.less';
 @import '../styles/panel.less';
