Add error handling
Resolves #4

--- a/src/components/page-header.less
+++ b/src/components/page-header.less
@@ -9,6 +9,16 @@
   background-color: #fff;
   box-shadow: 0 2px 8px #f0f1f2;
   z-index: 1000;
+  min-height: 60px;
+
+  &.PageHeader--fullScreen {
+    background-color: inherit;
+    box-shadow: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
 }
 
 .PageHeader-logo {
