--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -35,6 +35,7 @@ body {
 @import '../components/pages/reset-password.less';
 @import '../components/pages/complete-registration.less';
 @import '../components/pages/complete-password-reset.less';
+@import '../components/error-root.less';
 @import '../components/menu-doc-ref.less';
 @import '../components/audio-player.less';
 @import '../components/repository-browser.less';
