Add hard-delete functionality
Resolves #3

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -24,8 +24,9 @@ body {
 @import '../components/page-content.less';
 @import '../components/page-footer.less';
 @import '../components/pages/index.less';
-@import '../components/pages/menu.less';
+@import '../components/pages/doc.less';
 @import '../components/pages/edit-doc.less';
+@import '../components/pages/menu.less';
 @import '../components/pages/edit-menu.less';
 @import '../components/pages/login.less';
 @import '../components/pages/users.less';
@@ -40,6 +41,7 @@ body {
 @import '../components/audio-player.less';
 @import '../components/repository-browser.less';
 @import '../components/media-control.less';
+@import '../components/deleted-section.less';
 @import '../styles/panel.less';
 @import '../styles/section.less';
 @import '../plugins/markdown/markdown.less';
