--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -13,3 +13,4 @@
 @global-section-padding-large-screen: 12px;
 @global-elmu-blue: @primary-color;
 @global-text-color: @text-color;
+@global-error-color: @error-color;
