--- a/src/styles/ant-overrides.less
+++ b/src/styles/ant-overrides.less
@@ -1,7 +1,10 @@
-// The prefix to use on all css classes from ant.
+// /* stylelint-disable at-rule-empty-line-before,at-rule-name-space-after,at-rule-no-unknown */
+// @import "../color/colors";
+
+// // The prefix to use on all css classes from ant.
 // @ant-prefix             : ant;
 
-// -------- Colors -----------
+// // -------- Colors -----------
 @primary-color          : @blue-7;
 // @info-color             : @blue-6;
 // @success-color          : @green-6;
@@ -11,8 +14,8 @@
 // @warning-color          : @gold-6;
 // @normal-color           : #d9d9d9;
 
-// Color used by default to control hover and active backgrounds and for
-// alert info backgrounds.
+// // Color used by default to control hover and active backgrounds and for
+// // alert info backgrounds.
 // @primary-1: color(~`colorPalette("@{primary-color}", 1)`);  // replace tint(@primary-color, 90%)
 // @primary-2: color(~`colorPalette("@{primary-color}", 2)`);  // replace tint(@primary-color, 80%)
 // @primary-3: color(~`colorPalette("@{primary-color}", 3)`);  // unused
@@ -24,16 +27,16 @@
 // @primary-9: color(~`colorPalette("@{primary-color}", 9)`);  // unused
 // @primary-10: color(~`colorPalette("@{primary-color}", 10)`);  // unused
 
-// Base Scaffolding Variables
-// ---
+// // Base Scaffolding Variables
+// // ---
 
-// Background color for `<body>`
+// // Background color for `<body>`
 // @body-background        : #fff;
-// Base background color for most components
+// // Base background color for most components
 // @component-background   : #fff;
-// @font-family-no-number  : "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
-// @font-family            : "Monospaced Number", @font-family-no-number;
-// @code-family            : Consolas, Menlo, Courier, monospace;
+// @font-family  : "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif,
+// "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+// @code-family            : "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
 // @heading-color          : fade(#000, 85%);
 // @text-color             : fade(#000, 65%);
 // @text-color-secondary   : fade(#000, 45%);
@@ -47,33 +50,33 @@
 // @border-radius-base     : 4px;
 // @border-radius-sm       : 2px;
 
-// vertical paddings
+// // vertical paddings
 // @padding-lg    : 24px; // containers
 // @padding-md    : 16px; // small containers and buttons
 // @padding-sm    : 12px; // Form controls and items
 // @padding-xs    : 8px;  // small items
 
-// vertical padding for all form controls
+// // vertical padding for all form controls
 // @control-padding-horizontal: @padding-sm;
 // @control-padding-horizontal-sm: @padding-xs;
 
-// The background colors for active and hover states for things like
-// list items or table cells.
+// // The background colors for active and hover states for things like
+// // list items or table cells.
 // @item-active-bg         : @primary-1;
 // @item-hover-bg          : @primary-1;
 
-// ICONFONT
+// // ICONFONT
 // @iconfont-css-prefix    : anticon;
-@icon-url               : "/fonts/font_148784_y7rvx0pkve2buik9/iconfont";
+// @icon-url               : "https://at.alicdn.com/t/font_148784_v4ggb6wrjmkotj4i";
 
-// LINK
+// // LINK
 // @link-color             : @primary-color;
 // @link-hover-color       : color(~`colorPalette("@{link-color}", 5)`);
 // @link-active-color      : color(~`colorPalette("@{link-color}", 7)`);
 // @link-decoration        : none;
 // @link-hover-decoration  : none;
 
-// Animation
+// // Animation
 // @ease-out            : cubic-bezier(0.215, 0.61, 0.355, 1);
 // @ease-in             : cubic-bezier(0.55, 0.055, 0.675, 0.19);
 // @ease-in-out         : cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -87,13 +90,13 @@
 // @ease-in-quint       : cubic-bezier(0.755, 0.05, 0.855, 0.06);
 // @ease-in-out-quint   : cubic-bezier(0.86, 0, 0.07, 1);
 
-// Border color
+// // Border color
 // @border-color-base      : hsv(0, 0, 85%);  // base border outline a component
 // @border-color-split     : hsv(0, 0, 91%);  // split border inside a component
 // @border-width-base      : 1px;            // width of the border for a component
 // @border-style-base      : solid;          // style of a components border
 
-// Outline
+// // Outline
 // @outline-blur-size      : 0;
 // @outline-width          : 2px;
 // @outline-color          : @primary-color;
@@ -101,12 +104,12 @@
 // @background-color-light : hsv(0, 0, 98%);  // background of header and selected item
 // @background-color-base  : hsv(0, 0, 96%);  // Default grey background color
 
-// Disabled states
+// // Disabled states
 // @disabled-color         : fade(#000, 25%);
 // @disabled-bg            : @background-color-base;
 // @disabled-color-dark    : fade(#fff, 35%);
 
-// Shadow
+// // Shadow
 // @shadow-color           : rgba(0, 0, 0, .15);
 // @box-shadow-base        : @shadow-1-down;
 // @shadow-1-up            : 0 2px 8px @shadow-color;
@@ -115,7 +118,7 @@
 // @shadow-1-right         : 2px 0 8px @shadow-color;
 // @shadow-2               : 0 4px 12px @shadow-color;
 
-// Buttons
+// // Buttons
 // @btn-font-weight        : 400;
 // @btn-border-radius-base : @border-radius-base;
 // @btn-border-radius-sm   : @border-radius-base;
@@ -151,57 +154,58 @@
 
 // @btn-group-border       : @primary-5;
 
-// Checkbox
+// // Checkbox
 // @checkbox-size          : 16px;
 // @checkbox-color         : @primary-color;
+// @checkbox-check-color   : #fff;
 
-// Radio
+// // Radio
 // @radio-size             : 16px;
 // @radio-dot-color        : @primary-color;
 
-// Radio buttons
+// // Radio buttons
 // @radio-button-bg           : @btn-default-bg;
 // @radio-button-color        : @btn-default-color;
 // @radio-button-hover-color  : @primary-5;
 // @radio-button-active-color : @primary-7;
 
-// Media queries breakpoints
-// Extra small screen / phone
+// // Media queries breakpoints
+// // Extra small screen / phone
 // @screen-xs              : 480px;
 // @screen-xs-min          : @screen-xs;
 
-// Small screen / tablet
+// // Small screen / tablet
 // @screen-sm              : 576px;
 // @screen-sm-min          : @screen-sm;
 
-// Medium screen / desktop
+// // Medium screen / desktop
 // @screen-md              : 768px;
 // @screen-md-min          : @screen-md;
 
-// Large screen / wide desktop
+// // Large screen / wide desktop
 // @screen-lg              : 992px;
 // @screen-lg-min          : @screen-lg;
 
-// Extra large screen / full hd
+// // Extra large screen / full hd
 // @screen-xl              : 1200px;
 // @screen-xl-min          : @screen-xl;
 
-// Extra extra large screen / large descktop
+// // Extra extra large screen / large descktop
 // @screen-xxl              : 1600px;
 // @screen-xxl-min          : @screen-xxl;
 
-// provide a maximum
+// // provide a maximum
 // @screen-xs-max          : (@screen-sm-min - 1px);
 // @screen-sm-max          : (@screen-md-min - 1px);
 // @screen-md-max          : (@screen-lg-min - 1px);
 // @screen-lg-max          : (@screen-xl-min - 1px);
 // @screen-xl-max          : (@screen-xxl-min - 1px);
 
-// Grid system
+// // Grid system
 // @grid-columns           : 24;
 // @grid-gutter-width      : 0;
 
-// Layout
+// // Layout
 // @layout-body-background         : #f0f2f5;
 // @layout-header-background       : #001529;
 // @layout-footer-background       : @layout-body-background;
@@ -214,12 +218,12 @@
 // @layout-trigger-color           : #fff;
 // @layout-zero-trigger-width      : 36px;
 // @layout-zero-trigger-height     : 42px;
-// Layout light theme
+// // Layout light theme
 // @layout-sider-background-light  : #fff;
 // @layout-trigger-background-light: #fff;
 // @layout-trigger-color-light     : @text-color;
 
-// z-index list
+// // z-index list
 // @zindex-affix           : 10;
 // @zindex-back-top        : 10;
 // @zindex-modal-mask      : 1000;
@@ -231,13 +235,13 @@
 // @zindex-dropdown        : 1050;
 // @zindex-tooltip         : 1060;
 
-// Animation
+// // Animation
 // @animation-duration-slow: .3s; // Modal
 // @animation-duration-base: .2s;
 // @animation-duration-fast: .1s; // Tooltip
 
-// Form
-// ---
+// // Form
+// // ---
 // @label-required-color        : @highlight-color;
 // @label-color                 : @heading-color;
 // @form-item-margin-bottom     : 24px;
@@ -245,8 +249,8 @@
 // @form-vertical-label-padding : 0 0 8px;
 // @form-vertical-label-margin  : 0;
 
-// Input
-// ---
+// // Input
+// // ---
 // @input-height-base           : 32px;
 // @input-height-lg             : 40px;
 // @input-height-sm             : 24px;
@@ -264,51 +268,52 @@
 // @input-addon-bg              : @background-color-light;
 // @input-hover-border-color    : @primary-color;
 // @input-disabled-bg           : @disabled-bg;
+// @input-outline-offset        : 0 0;
 
-// Tooltip
-// ---
-//* Tooltip max width
+// // Tooltip
+// // ---
+// //* Tooltip max width
 // @tooltip-max-width: 250px;
-//** Tooltip text color
+// //** Tooltip text color
 // @tooltip-color: #fff;
-//** Tooltip background color
+// //** Tooltip background color
 // @tooltip-bg: rgba(0, 0, 0, .75);
-//** Tooltip arrow width
+// //** Tooltip arrow width
 // @tooltip-arrow-width: 5px;
-//** Tooltip distance with trigger
+// //** Tooltip distance with trigger
 // @tooltip-distance: @tooltip-arrow-width - 1px + 4px;
-//** Tooltip arrow color
+// //** Tooltip arrow color
 // @tooltip-arrow-color: @tooltip-bg;
 
-// Popover
-// ---
-//** Popover body background color
+// // Popover
+// // ---
+// //** Popover body background color
 // @popover-bg: #fff;
-//** Popover text color
+// //** Popover text color
 // @popover-color: @text-color;
-//** Popover maximum width
+// //** Popover maximum width
 // @popover-min-width: 177px;
-//** Popover arrow width
+// //** Popover arrow width
 // @popover-arrow-width: 6px;
-//** Popover arrow color
+// //** Popover arrow color
 // @popover-arrow-color: @popover-bg;
-//** Popover outer arrow width
-//** Popover outer arrow color
+// //** Popover outer arrow width
+// //** Popover outer arrow color
 // @popover-arrow-outer-color: @popover-bg;
-//** Popover distance with trigger
+// //** Popover distance with trigger
 // @popover-distance: @popover-arrow-width + 4px;
 
-// Modal
-// --
+// // Modal
+// // --
 // @modal-mask-bg: rgba(0, 0, 0, 0.65);
 
-// Progress
-// --
+// // Progress
+// // --
 // @progress-default-color: @processing-color;
 // @progress-remaining-color: @background-color-base;
 
-// Menu
-// ---
+// // Menu
+// // ---
 // @menu-inline-toplevel-item-height: 40px;
 // @menu-item-height: 40px;
 // @menu-collapsed-width: 80px;
@@ -317,7 +322,7 @@
 // @menu-highlight-color: @primary-color;
 // @menu-item-active-bg: @item-active-bg;
 // @menu-item-group-title-color: @text-color-secondary;
-// dark theme
+// // dark theme
 // @menu-dark-color: @text-color-secondary-dark;
 // @menu-dark-bg: @layout-header-background;
 // @menu-dark-arrow-color: #fff;
@@ -325,14 +330,14 @@
 // @menu-dark-highlight-color: #fff;
 // @menu-dark-item-active-bg: @primary-color;
 
-// Spin
-// ---
+// // Spin
+// // ---
 // @spin-dot-size-sm: 14px;
 // @spin-dot-size: 20px;
 // @spin-dot-size-lg: 32px;
 
-// Table
-// --
+// // Table
+// // --
 // @table-header-bg: @background-color-light;
 // @table-header-sort-bg: @background-color-base;
 // @table-row-hover-bg: @primary-1;
@@ -341,41 +346,41 @@
 // @table-padding-vertical: 16px;
 // @table-padding-horizontal: 16px;
 
-// Tag
-// --
+// // Tag
+// // --
 // @tag-default-bg: @background-color-light;
 // @tag-default-color: @text-color;
 // @tag-font-size: @font-size-sm;
 
-// TimePicker
-// ---
+// // TimePicker
+// // ---
 // @time-picker-panel-column-width: 56px;
 // @time-picker-panel-width: @time-picker-panel-column-width * 3;
 // @time-picker-selected-bg: @background-color-base;
 
-// Carousel
-// ---
+// // Carousel
+// // ---
 // @carousel-dot-width: 16px;
 // @carousel-dot-height: 3px;
 // @carousel-dot-active-width: 24px;
 
-// Badge
-// ---
+// // Badge
+// // ---
 // @badge-height: 20px;
 // @badge-dot-size: 6px;
 // @badge-font-size: @font-size-sm;
 // @badge-font-weight: normal;
 // @badge-status-size: 6px;
 
-// Rate
-// ---
+// // Rate
+// // ---
 // @rate-star-color: @yellow-6;
 // @rate-star-bg: @border-color-split;
 
-// Card
-// ---
+// // Card
+// // ---
 // @card-head-color: @heading-color;
-// @card-head-background: @component-background;
+// @card-head-background: transparent;
 // @card-head-padding: 16px;
 // @card-inner-head-padding: 12px;
 // @card-padding-base: 24px;
@@ -383,8 +388,8 @@
 // @card-actions-background: @background-color-light;
 // @card-shadow: 0 2px 8px rgba(0, 0, 0, .09);
 
-// Tabs
-// ---
+// // Tabs
+// // ---
 // @tabs-card-head-background: @background-color-light;
 // @tabs-card-height: 40px;
 // @tabs-card-active-color: @primary-color;
@@ -402,14 +407,14 @@
 // @tabs-hover-color: @primary-5;
 // @tabs-active-color: @primary-7;
 
-// BackTop
-// ---
+// // BackTop
+// // ---
 // @back-top-color: #fff;
 // @back-top-bg: @text-color-secondary;
 // @back-top-hover-bg: @text-color;
 
-// Avatar
-// ---
+// // Avatar
+// // ---
 // @avatar-size-base: 32px;
 // @avatar-size-lg: 40px;
 // @avatar-size-sm: 24px;
@@ -420,23 +425,23 @@
 // @avatar-color: #fff;
 // @avatar-border-radius: @border-radius-base;
 
-// Switch
-// ---
+// // Switch
+// // ---
 // @switch-height: 22px;
 // @switch-sm-height: 16px;
 // @switch-sm-checked-margin-left: -(@switch-sm-height - 3px);
 // @switch-disabled-opacity: 0.4;
 // @switch-color: @primary-color;
 
-// Pagination
-// ---
+// // Pagination
+// // ---
 // @pagination-item-size: 32px;
 // @pagination-item-size-sm: 24px;
 // @pagination-font-family: Arial;
 // @pagination-font-weight-active: 500;
 
-// Breadcrumb
-// ---
+// // Breadcrumb
+// // ---
 // @breadcrumb-base-color:        @text-color-secondary;
 // @breadcrumb-last-item-color:   @text-color;
 // @breadcrumb-font-size:         @font-size-base;
@@ -446,8 +451,8 @@
 // @breadcrumb-separator-color:   @text-color-secondary;
 // @breadcrumb-separator-margin:  0 @padding-xs;
 
-// Slider
-// ---
+// // Slider
+// // ---
 // @slider-margin:                       14px 6px 10px;
 // @slider-rail-background-color:        @background-color-base;
 // @slider-rail-background-color-hover:  #e1e1e1;
@@ -463,9 +468,31 @@
 // @slider-disabled-color:               @disabled-color;
 // @slider-disabled-background-color:    @component-background;
 
-// Collapse
-// ---
+// // Tree
+// // ---
+// @tree-title-height:                   24px;
+// @tree-child-padding:                  18px;
+// @tree-directory-selected-color:       #fff;
+// @tree-directory-selected-bg:          @primary-color;
+
+// // Collapse
+// // ---
 // @collapse-header-padding:             12px 0 12px 40px;
 // @collapse-header-bg:                  @background-color-light;
 // @collapse-content-padding:            @padding-md;
 // @collapse-content-bg:                 @component-background;
+
+// // Message
+// // ---
+// @message-notice-content-padding:      10px 16px;
+
+// // List
+// // ---
+// @list-empty-text-padding:                    @padding-md;
+// @list-item-padding:                          @padding-sm 0;
+// @list-item-content-margin:                   0 0 @padding-md 0;
+// @list-item-meta-margin-bottom:               @padding-md;
+// @list-item-meta-avatar-margin-right:         @padding-md;
+// @list-item-meta-title-margin-bottom:         @padding-sm;
+
+// @import "./default.deperated.less";
