--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -2,22 +2,16 @@
 @index-page-help-button-hover-shadow-color: @global-elmu-blue;
 
 .IndexPage {
-  width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
-  padding-bottom: 20vh;
+  padding: @global-content-padding @global-content-padding 20vh @global-content-padding;
 }
 
 .IndexPage-title {
-  font-family: 'Dancing Script';
-  font-size: 72px;
   text-align: center;
-  color: @global-elmu-blue;
-  margin: 32px 0;
+  margin-bottom: 32px;
 }
 
 .IndexPage-search {
-  margin: 32px 0;
+  margin-bottom: 32px;
 }
 
 .IndexPage-helpButton {
