--- a/src/components/pages/profile.less
+++ b/src/components/pages/profile.less
@@ -1,16 +1,3 @@
 .ProfilePage {
-  width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
-  padding-bottom: 20vh;
+  padding: @global-content-padding;
 }
-
-.ProfilePage-title {
-  font-family: 'Dancing Script';
-  font-size: 72px;
-  text-align: center;
-  color: @global-elmu-blue;
-  margin: 32px 0;
-}
-
-.ProfilePage-form {}
