--- a/src/components/pages/users.less
+++ b/src/components/pages/users.less
@@ -2,19 +2,13 @@
 
 .UsersPage-roleTag {
 
-  .UsersPage-roleTag--user {
-
-  }
+  .UsersPage-roleTag--user {}
 
   .UsersPage-roleTag--superUser {
     color: @red-10;
   }
 
-  .UsersPage-roleTag--editor {
+  .UsersPage-roleTag--editor {}
 
-  }
-
-  .UsersPage-roleTag--superEditor {
-
-  }
+  .UsersPage-roleTag--superEditor {}
 }
