--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -9,8 +9,11 @@
 @grey-9:  #262626;
 @grey-10: #000000;
 
-@global-section-width-large-screen: 1200px;
-@global-section-padding-large-screen: 12px;
+@global-content-padding: 12px;
+@global-min-page-width: 200px;
+@global-content-width-wide: 1200px;
+@global-content-width-narrow: 800px;
+
 @global-elmu-blue: @primary-color;
 @global-text-color: @text-color;
 @global-error-color: @error-color;
