--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 25px;
+  padding: @global-content-padding (2.5 * @global-content-padding) @global-content-padding @global-content-padding;
 }
 
 .DocPage-revisionPickerLabel {
