--- a/src/components/pages/edit-doc.less
+++ b/src/components/pages/edit-doc.less
@@ -1,5 +1,9 @@
 .EditDocPage {}
 
 .EditDocPage-docEditor {
-  padding-bottom: 2 * @global-section-padding-large-screen;
+  padding: @global-content-padding @global-content-padding (2 * @global-content-padding) @global-content-padding;
+}
+
+.EditDocPage-addSectionButton {
+  padding: (2 * @global-content-padding) @global-content-padding @global-content-padding @global-content-padding;
 }
