--- a/src/components/pages/login.less
+++ b/src/components/pages/login.less
@@ -1,16 +1,10 @@
 .LoginPage {
-  width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
-  padding-bottom: 20vh;
+  padding: @global-content-padding @global-content-padding 20vh @global-content-padding;
 }
 
 .LoginPage-title {
-  font-family: 'Dancing Script';
-  font-size: 72px;
   text-align: center;
-  color: @global-elmu-blue;
-  margin: 32px 0;
+  margin-bottom: 32px;
 }
 
 .LoginPage-errorMessage {
