--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -19,10 +19,17 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+h1 {
+  font-size: 2em;
+}
+
+h2 {
+  font-size: 1.5em;
+}
+
 @import '../components/page.less';
-@import '../components/page-header.less';
-@import '../components/page-content.less';
-@import '../components/page-footer.less';
+@import '../components/error-page.less';
+@import '../components/page-menu.less';
 @import '../components/pages/index.less';
 @import '../components/pages/doc.less';
 @import '../components/pages/edit-doc.less';
@@ -36,6 +43,7 @@ body {
 @import '../components/pages/reset-password.less';
 @import '../components/pages/complete-registration.less';
 @import '../components/pages/complete-password-reset.less';
+@import '../components/elmu-logo.less';
 @import '../components/error-root.less';
 @import '../components/menu-doc-ref.less';
 @import '../components/audio-player.less';
